# NeosegPipeline

./: About.h  About.ui  AntsParameters.cxx  AntsParameters.h  Atlas.h  AtlasGeneration.cxx  AtlasGeneration.h  AtlasRegistration.cxx  AtlasRegistration.h  CMakeLists.txt  Common.cmake  DerivedWindow.cxx  DerivedWindow.h  DtiRegistration.cxx  DtiRegistration.h  ExecutablePaths.cxx  ExecutablePaths.h  MainScriptThread.cxx  MainScriptThread.h  Neo.h  NeosegExecution.cxx  NeosegExecution.h  NeosegParameters.cxx  NeosegParameters.h  NeosegPipeline.cmake  NeosegPipeline.xml  NeosegPipelineTool.cxx  NeosegPipelineTool.h  Pipeline.cxx  Pipeline.h  PipelineParameters.cxx  PipelineParameters.h  PreProcessingData.cxx  PreProcessingData.h  PriorProbability.h  README.md  SuperBuild.cmake  TemplateImage.h  Window.ui  XmlReader.cxx  (+4 more)
NeoSegPipeline/: About.ui  AntsParameters.cxx  Atlas.h  AtlasGeneration.cxx  AtlasPopulationRegistration.cxx  AtlasRegistration.cxx  CMakeLists.txt  DerivedWindow.cxx  DerivedWindow.h  ExistingAtlasRegistration.h  LibraryPaths.cxx  MainScriptThread.cxx  Neo.h  NeosegExecution.cxx  NeosegExecution.h  NeosegParameters.cxx  NeosegPipeline.xml  Pipeline.cxx  Pipeline.h  PipelineParameters.cxx  PipelineParameters.h  README.md  Script.cxx  Script.h  TemplateImage.h  Window.ui  XmlReader.cxx  XmlReader.h  XmlWriter.cxx  XmlWriter.h  main.cxx  mainWheightedLabelsAverage.cxx  parameters.xml  resources.qrc
NeoSegPipeline/icons/: open-softwares.odg  open-softwares.png.odg
NeosegPipeline/: ABCExecution.cxx  ABCExecution.h  ABCParameters.ui  About.h  About.ui  AntsParameters.cxx  AntsParameters.h  AtlasGeneration.cxx  AtlasGeneration.h  AtlasPopulationRegistration.cxx  AtlasPopulationRegistration.h  AtlasRegistration.cxx  AtlasRegistration.h  CMakeLists.txt  CountNumberOfLabels.cxx  CountNumberofLabels.h  DerivedWindow.cxx  DerivedWindow.h  DtiRegistration.cxx  DtiRegistration.h  ExecutablePaths.cxx  ExecutablePaths.h  ExistingAtlasRegistration.cxx  LibraryPaths.cxx  LibraryPaths.h  MinMax.h  MinMax.txx  Neo.h  NeosegExecution.cxx  NeosegExecution.h  NeosegParameters.cxx  NeosegParameters.h  NeosegPipeline.cxx  NeosegPipeline.xml  NeosegPipelineTool.cxx  NeosegPipelineTool.h  Origin.h  Origin.txx  Pipeline.cxx  Pipeline.h  (+15 more)
ReassignWhiteMatter/: CMakeLists.txt  Parameters.cxx  Parameters.h  ParametersXMLFile.cxx  ParametersXMLFile.h  ReassignWhiteMatter.xml  main.cxx
SpreadFA/: CMakeLists.txt  SpreadFA.xml  addWMFromFA.scripts  itkSpreadFA.h  main.cxx
SuperBuild/: External_ABC.cmake  External_ANTs.cmake  External_BatchMake.cmake  External_CLAPACK.cmake  External_DTIProcess.cmake  External_ITKTransformTools.cmake  External_ITKv4.cmake  External_Qt4.cmake  External_SPHARM-PDM.cmake  External_SlicerCLI.cmake  External_SlicerExecutionModel.cmake  External_VTK.cmake  External_neoseg.cmake  External_niral_utilities.cmake  External_teem.cmake  External_zlib.cmake
WeightedLabelsAverage/: Atlas.h  CMakeLists.txt  Parameters.cxx  Parameters.h  ParametersXMLFile.cxx  ParametersXMLFile.h  WeightedLabelsAverage.xml  itkLocalNormalizedCorrelationMetricFilter.h  itkLocalNormalizedCorrelationMetricFilter.hxx  itkSpreadWeights.h  itkWeightedLabelsAverageFilter.h  itkWeightedLabelsAverageFilter.hxx  main.cxx
